feat: integration native with midori browser, without extensiions
